# sleeping-journal

./: Cargo.toml  LICENSE  README.md  Readme.md  Trunk.toml  game.lrc  index.html  msg.lrc  rustfmt.toml
docs/: index.html  sleeping-journal-11f102bd9ae49d71.js  sleeping-journal-11f102bd9ae49d71_bg.wasm  sleeping-journal-528f58114027de5b.js  sleeping-journal-528f58114027de5b_bg.wasm  sleeping-journal-85c85cc0be3d2664.js  sleeping-journal-85c85cc0be3d2664_bg.wasm  sleeping-journal-86dafd3693b65ba6.js  sleeping-journal-86dafd3693b65ba6_bg.wasm  sleeping-journal-e7e3e93c7311784.js  sleeping-journal-e7e3e93c7311784_bg.wasm  styles-d1f530dad39d0a97.css  styles-e46d8582197bd0ea.css
msg/: en.csv
src/: html.rs  main.rs  route.rs
src/data/: encounter_type.rs  mod.rs  nav.rs  note.rs  quest.rs  quest_location.rs  sub_component.rs  vis.rs
src/game/: game_language.rs  generated.rs  location_id.rs  map.rs  mod.rs  msg.rs  quest_id.rs  quest_locale.rs
src/global/: app.rs  data.rs  mod.rs
src/pane/: action.rs  edit.rs  edit_quest.rs  info.rs  map.rs  map_location.rs  map_new_quest.rs  mod.rs  settings.rs  todo.rs
src/ser/: csv.rs  game_data_1.rs  game_data_2.rs  game_data_3.rs  mod.rs  settings.rs
static/: styles.scss
static/styles/: _map.scss  _nav.scss  _overrides.scss
