[package]
name = "sleeping-journal"
version = "1.0.31"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = { version = "0.22.1", default-features = false, features = ["alloc"] }
chrono = { version = "0.4.31", default-features = false, features = ["clock", "wasmbind"] }
csv = { version = "1", default-features = false }
enum-tools = "0.5.3"
enumflags2 = { version = "0.7.8", default-features = false }
gloo-file = { version = "0.3.0", default-features = false }
gloo-history = { version = "0.2.2", default-features = false }
gloo-storage = { version = "0.3.0", default-features = false }
gloo-timers = { version = "0.3.0", default-features = false }
gloo-utils = { version = "0.2.0", default-features = false }
itertools = { version = "0.12.0", default-features = false }
serde = { version = "1.0.189", default-features = false, features = ["serde_derive"] }
serde_repr = { version = "0.1.16", default-features = false }
typed-i18n = { version = "0.6.1" }
urlencoding = { version = "2.1.3", default-features = false }
web-sys = { version = "0.3.64", default-features = false, features = ["HtmlTextAreaElement", "HtmlSelectElement"] }
yew = { version = "0.21.0", default-features = false, features = ["csr"] }
yew-bootstrap = { version = "0.11.0", default-features = false }
yew-router = { version = "0.18.0", default-features = false }

[features]
default = []
debug = []

[[bin]]
name = "copy-and-link"
